--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "composite": true,
+
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
     "lib": ["ES2023"],
@@ -12,7 +14,9 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    "noEmit": false,
+    "emitDeclarationOnly": true,
+    "esModuleInterop": true,
 
     /* Linting */
     "strict": true,
