feat: add Project Carousel and template Hero section

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,8 @@
       "@components/*": ["./src/components/*"],
       "@sections/*": ["./src/sections/*"],
       "@theme/*": ["./src/theme/*"],
+      "@data/*": ["./src/data/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@assets/*": ["./src/assets/*"]
     },
 
