--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "@components/*": ["./src/components/*"],
       "@sections/*": ["./src/sections/*"],
       "@theme/*": ["./src/theme/*"],
+      "@data/*": ["./src/data/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@assets/*": ["./src/assets/*"],
     },
     "esModuleInterop": true,
