--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
+    "@mui/lab": "7.0.1-beta.21",
     "@mui/material": "^7.3.7",
+    "framer-motion": "^12.33.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "swiper": "^12.1.0"
